# chat_with_this_page-

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: auth.py  database.py  datasets.py  literature.py  main.py  providers.py
backend/tests/: conftest.py  test_auth.py  test_datasets.py  test_history.py  test_literature.py  test_main.py  test_providers.py
deploy/: ec2-setup.sh
extension/: assistant.css  assistant.js  background.js  content.js  github.css  github.js  manifest.json  markdown.js  options.css  options.html  options.js  popup.css  popup.html  popup.js  sidepanel.css  sidepanel.html
