[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "watchtower>=3.3.1",
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "pyjwt>=2.8.0",
    "cryptography>=42.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
